kubernetes/istio-sample/meshub/new-cluster/ingress-gateway-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: apps-vindpro-dev-tls
    hosts:
    - mesh-cluster.vindpro.dev
    - kiali-cluster.vindpro.dev
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - mesh-cluster.vindpro.dev
